--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub Actions Monitor</title>
+  <title>GitView</title>
   <style>
     * {
       margin: 0;
@@ -521,7 +521,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>GitHub Actions Monitor</h1>
+    <h1>GitView</h1>
     <div class="header-right">
       <div class="time-slider-container">
         <span class="time-slider-label" id="timeSliderLabel">30m</span>
